2002-06-07  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: Release 0.2.27

2002-06-05  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esdlib.c: (esd_open_sound):
	Add parenthesis to fix priority in foo?foo:0 expression
	(from Alexander Larsson <alexl@redhat.com>)

2002-06-04  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* docs/.cvsignore:
	* docs/Makefile.am:
	* docs/esd-config.1.in:
	* docs/esd.1.in:
	* docs/esdcat.1.in:
	* docs/esdctl.1.in:
	* docs/esddsp.1.in:
	* docs/esdfilt.1.in:
	* docs/esdloop.1.in:
	* docs/esdmon.1.in:
	* docs/esdplay.1.in:
	* docs/esdrec.1.in:
	* docs/esdsample.1.in:
	Add manpages (from Debian). Fix bug #81038

	* esd.m4:
	Apply Debian patch to always use C compiler for test
	
	* configure.in:
	* esd_config.c: (esd_config_read_file):
	Apply Debian patch to detect if strtok is available on the system

	* esdcat.c: (main):
	* esdloop.c: (main):
	* esdmon.c: (main):
	* esdrec.c: (main):
	* esdsample.c: (main):
	Apply Debian patch to output "open socket" message on stderr

2002-06-04  Frederic Crozat <fcrozat@mandrakesoft.com>

	* esd.c: (safe_mksocketdir):
	Fix socket directory test (bug #83158)
	(Patch from Diego SantaCruz <DiegoSantaCrux@epfl.ch>)

2002-06-04  Frederic Crozat <fcrozat@mandrakesoft.com>

	* esdlib.c: (esd_open_sound):
	Fix size of allocated string for daemon spawn. 
	(Patch from Alex Larsson <alexl@redhat.com>)

2002-06-04  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* players.c: (read_player):
	Fix locking at end of audio stream (bug #81864 and Ximian bug 24717)
	(Patch from Staniago Otero <siryurian@terra.es>)

2002-05-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* audio_alsa.c: (esd_audio_open):
	* audio_alsa09.c: (esd_audio_open):
	* audio_oss.c: (esd_audio_open):
	Cleaner version of endianess fix (idea from Takashi Iwai)

2002-05-13 Stephen Browne <stephen.browne@sun.com>

	* util.c: new file for esd utility functions
		  currently only has new functions for getting the